<resources>
    <string name="app_name">Jobfizzer XP</string>
    <string name="thanks_for">Thanks for using Jobfizzer XP service</string>
    <string name="font_bold">fonts/Bold.ttf</string>
    <string name="font_medium">fonts/Medium.ttf</string>
    <string name="font_regular">fonts/Regular.ttf</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="general">General</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="available">Available</string>
    <string name="hello">Hello!</string>
    <string name="create_your">Create your account to continue.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="dob">DOB</string>
    <string name="address1">Address 1</string>
    <string name="address2">Country</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="emailAddress">Email Address</string>
    <string name="phonenumber">Phone number</string>
    <string name="password">Password</string>
    <string name="password_caps">PASSWORD</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="add_category">Add Category</string>
    <string name="add_category_details">Add Category Details</string>
    <string name="experience">Experience</string>
    <string name="experiencedot">Experience:</string>
    <string name="price_per_hour">Price Per hour ₦</string>
    <string name="price_per_hourdot">Price Per hour ₦:</string>
    <string name="quick_pitch">Quick Pitch</string>
    <string name="done">Done</string>
    <string name="catname">Cat.name:</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="already_have">Already Have an account?</string>
    <string name="next">next</string>
    <string name="work_experience">Work Experience</string>
    <string name="about_you">About You</string>
    <string name="time">Time</string>
    <string name="okay">Okay</string>
    <string name="add_time">ADD TIME</string>
    <string name="finish">Finish</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="please_enter_valid_password">Please Enter Valid Password</string>
    <string name="enter_firstname">Please Enter First Name</string>
    <string name="enter_lastname">Please Enter Last Name</string>
    <string name="enter_dob">Please Enter Date of Birth</string>
    <string name="enter_address">Please Enter Address</string>
    <string name="enter_city">Please Enter City</string>
    <string name="enter_state">Please Enter State</string>
    <string name="enter_zipcode">Please Enter ZipCode</string>
    <string name="enter_phonenumber">Please Enter Phone Number</string>
    <string name="enter_phonelength">Please Enter valid Phone Number</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_confirmpassword">Please Enter Confirm Password</string>
    <string name="enter_newpassword">Please Enter New Password</string>
    <string name="enter_work_experience">Please Enter Work Experience</string>
    <string name="enter_about_you">Please Enter About you</string>
    <string name="password_not_match">Password and confirm Password must be same</string>
    <string name="help_your">Help your user improve their service by rating them</string>
    <string name="give_us">Give us your rating</string>
    <string name="submit">Submit</string>
    <string name="new_request">New Request !!</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="are_you_sure_cancel">Are you sure, You want to cancel the job?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="please_login_again">Please login to continue</string>
    <string name="please_select_categroy">Please Select atleast one category</string>
    <string name="completed_job">Completed Job</string>
    <string name="confirm_when_user_paid">Confirm When User paid the full amount</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="email_caps">EMAIL</string>
    <string name="enter_validation">Enter Validation Code</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="start_to_place">Start to Place</string>
    <string name="start_job">Start Job</string>
    <string name="completed">Completed</string>
    <string name="working_progress">Working in progress</string>
    <string name="finished">Finished</string>
    <string name="please_enter_experience">Please Enter Experience</string>
    <string name="please_enter_price_per_ho">Please Enter Valid Price per Hour</string>
    <string name="please_enter_quick_pitch">Please Enter Quick Pitch</string>
    <string name="please_select_subcategroy">Please Enter Sub Category</string>
    <string name="camera_permission_error">You need to give permission to open camera</string>
    <string name="storage_permission_error">You need to give permission to open storage</string>
    <string name="location_permission_error">You need to give permission for Location</string>
    <string name="rejected">Rejected</string>
    <string name="select_gender">Select Gender</string>
    <string name="type_your_comments">Type your comments…</string>
    <string name="cancelled">Cancelled</string>
    <string name="oops">Confirm</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mobile">Mobile Number</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="edit_address">Edit Address</string>
    <string name="loading">Loading. . .</string>
    <string name="empty_bookings">You have no Bookings Available</string>
    <string name="schedule">Schedule</string>
    <string name="edit_category_details">Edit Category Details</string>
    <string name="unable_to_select">Unable to select image</string>
    <string name="services">Services</string>
    <string name="schedules">Schedules</string>
    <string name="by_user">by user</string>
    <string name="by_provider">by provider</string>
    <string name="billing_name_head">Billing Name:</string>
    <string name="booking_id_head">Booking ID:</string>
    <string name="date_and_time">Date and Time :</string>
    <string name="address_head">Address :</string>
    <string name="price_head">Price :</string>
    <string name="service_head">Service:</string>
    <string name="cancel">Cancel</string>
    <string name="service_booked">Service Booked</string>
    <string name="service_accepted">Service Accepted</string>
    <string name="provider_arrived">Provider Arrived</string>
    <string name="job_started">Job Started</string>
    <string name="job_completed">Job Completed</string>
    <string name="cancelled_by_user">Cancelled by user</string>
    <string name="cancelled_by_provider">Cancelled by Provider</string>
    <string name="service_rejected">Service Rejected</string>
    <string name="date">Date</string>
    <string name="waiting_for">Waiting For payment Confirmation</string>
    <string name="review_pending">Review</string>
    <string name="price_per">PRICE/HR</string>
    <string name="elapsed_time"> </string>
    <string name="on_the_way">On the Way</string>
    <string name="started_to_customer_place">Started to customer Place</string>
    <string name="booking_status">Booking Status :</string>
    <string name="complete_job">Complete Job</string>
    <string name="please_upload_an_image">Please Upload an Image</string>
    <string name="hours">Hours</string>
    <string name="total">Total</string>
    <string name="choose_your_option">Choose your option</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select">Select</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="sent_you_a_request">sent you a request for</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_your_number">Enter your email to receive a verification code</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_valid_otp">Please Enter Otp</string>
    <string name="no_sub_categroy">No SubCategory Available. Please Select other category</string>
    <string name="change_theme">Change Theme</string>
    <string name="password_must_be_six">Password must be minimum six characters</string>
    <string name="want_change_theme">Are you sure you want to change the theme?</string>
    <string name="image_failed">Image upload failed</string>
    <string name="skip">Skip</string>
    <string name="take_picture">Take Photo</string>
    <string name="miscellaneous">Add miscellaneous</string>
    <string name="miscellaneous_details">Miscellaneous Details</string>
    <string name="tax">Tax</string>
    <string name="upload">upload</string>
    <string name="chat">Chat</string>
    <string name="write_a_message">Write a message</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="waiting_for_internet">Waiting for Internet</string>
    <string name="connecting">Connected</string>
    <string name="currency_symbol"> ₦ </string>
    <string name="minus_symbol">-</string>
    <string name="percentage_symbol">%</string>
    <string name="no_offers">0.00</string>
    <string name="google_map">Get address from Map</string>
    <string name="permission_denied">Permission denied</string>
    <string name="before_service">Before Service</string>
    <string name="after_service">After Service</string>
    <string name="appointments">Appointments</string>
    <string name="bookings">Bookings</string>
    <string name="booking_id">Booking Id: </string>
    <string name="tell_us_about_the_service">Tell us about the service?</string>
    <string name="no_internet_connection">No Internet Connection.. Please Try Again..</string>
    <string name="session_expired">Session Expired. Login to continue</string>
    <string name="server_error">Server Error.. Please Try Again..</string>
    <string name="network_error">Network Error.. Please Try Again..</string>
    <string name="parsing_error">Parse Error.. Please Try Again..</string>
    <string name="udx">udx</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
</resources>