<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="20dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/light_grey"
    app:cardCornerRadius="5dp"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp">

            <com.app.jobfizzerxp.utilities.customLibraries.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/red" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_close_white" />
        </FrameLayout>


        <TextView
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/oops"
            android:textColor="@color/text_colour"
            android:textSize="@dimen/large_text" />


        <TextView
            fontPath="@string/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/are_you_sure_cancel"
            android:textSize="@dimen/very_normal_text" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_grey"
            android:weightSum="2">


            <TextView
                android:id="@+id/noButton"
                fontPath="@string/font_medium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textSize="@dimen/very_normal_text" />

            <TextView
                android:id="@+id/yesButton"
                fontPath="@string/font_medium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textSize="@dimen/very_normal_text" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>