<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="20dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/light_grey"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/dialogHeading"
            style="@style/DialogHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/take_picture" />

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:src="@drawable/add_photos" />
        </FrameLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/yesButton"
            style="@style/CustomBtnRipple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="35dp"
            android:gravity="center"
            android:text="@string/upload"
            android:visibility="visible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/okButton"
            style="@style/CustomBtnRipple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/okay"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/noButton"
            fontPath="@string/font_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_white_btn"
            android:gravity="center"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/small_text"
            android:visibility="visible" />

    </LinearLayout>
</android.support.v7.widget.CardView>