<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rootView"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/close"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:alpha="0.8"
        android:background="@drawable/ripple_white_bg"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:src="@drawable/close" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/otpEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/enter_validation"
        android:textColor="@color/text_colour"
        android:textSize="@dimen/header_text" />

    <EditText
        android:id="@+id/otpEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@color/et_bg"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:maxLength="6"
        android:padding="15dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/verifyButton"
        style="@style/CustomBtnRipple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:maxLength="6"
        android:text="@string/verify" />

</RelativeLayout>