<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <include layout="@layout/custom_toolbar" />


    <TextView
        fontPath="@string/font_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/enter_your_number"
        android:textColor="@color/text_colour"
        android:textSize="@dimen/very_large_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <Button
            fontPath="@string/font_regular"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="15"
            android:background="?colorPrimary"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/emailEditText"
            fontPath="@string/font_regular"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="85"
            android:background="@color/et_bg"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/text_colour" />
    </LinearLayout>

    <Button
        android:id="@+id/sendOtp"
        style="@style/CustomBtnRipple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send" />

</LinearLayout>